--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,14 @@
 .heading{
     color: blue;
 }
+
+.title-flag{
+    padding-top: 30px;
+}
+
+.exchange-rate{
+    padding-top: 100px;
+}
+.hero{
+    padding-bottom: 70px;
+}
