--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 .dropdown-menu{
-  padding: 8px 12px;
+  padding: 8px 8px;
   color: black;
-  background-color: gray;
+  background-color: grey;
   border: 1px solid black;
   cursor: pointer;
   border-radius: 5px; 
@@ -12,7 +12,6 @@
 .dropdown-menu:hover{
   outline: none;
   border: 1px solid grey;
-  color: pink;
 }
 
 .dropdown-menu option{
