--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,36 +4,46 @@
   background-color: gray;
   border: 1px solid black;
   cursor: pointer;
-  border-radius: 5px; 
-      
-}
-
-.dropdown-menu:focus,
-.dropdown-menu:hover{
+  border-radius: 5px;
+  
+  }
+  
+  .dropdown-menu:focus,
+  .dropdown-menu:hover{
   outline: none;
   border: 1px solid grey;
   color: pink;
-}
-
-.dropdown-menu option{
+  }
+  
+  .dropdown-menu option{
   background: white;
-}
-#search-button{
-    border: 2px solid white;
-    padding: 23px;
-}
-
-.heading{
-    color: blue;
-}
-
-.title-flag{
-    padding-top: 30px;
-}
-
-.exchange-rate{
-    padding-right: 5px;
-}
-.hero{
-    padding-bottom: 70px;
-}
+  }
+  #search-button{
+  border: 2px solid white;
+  padding: 23px;
+  }
+  
+  .heading{
+  color: blue;
+  }
+  
+  .title-flag{
+  padding-top: 30px;
+  text-align: center;
+  
+  }
+  
+  .exchange-rate{
+  padding-right: 5px;
+  }
+  .hero{
+  padding-bottom: 70px;
+  }
+  
+  .flag-img{
+  width: 600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  }
